--- a/study/src/login.html
+++ b/study/src/login.html
@@ -13,7 +13,7 @@
     name  ：作为后端使用，区分唯一：请求服务器，必须存在，数据不能提交<br/>
     id    ：作为前端使用，区分唯一：<br/>
 </pre>
-<form method="get" action="http://localhost:8888/login">
+<form method="post" action="http://localhost:8888/login">
     用户名:<input type="text" name="uname" id="uname"/><br/>
     密码:<input type="password" name="pwd" id="pwd"/><br/>
     <input type="submit" value="登录"/>
